--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,7 +6,8 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/trusty64"
   config.vm.provision :docker
   config.vm.provision :docker_compose, run: "always", yml: "/vagrant/docker/docker-compose.yml"
-  config.vm.network "forwarded_port", guest: 8000, host: 80
+  config.vm.network "forwarded_port", guest: 80, host: 80
+  config.vm.network "public_network"
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
